# git-context-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/dev_context_mcp.egg-info/: PKG-INFO  SOURCES.txt
src/tools/: __init__.py  code_map.py  code_search.py  git_activity.py  git_ops.py  project_status.py  risk_scan.py  work_summary.py
tests/: conftest.py  test_git_ops.py  test_tools.py  test_tools_extended.py
