[project]
name = "dev-context-mcp"
version = "0.1.0"
description = "Professional MCP Server for Dev Context"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]